--- a/src/index.html
+++ b/src/index.html
@@ -16,27 +16,32 @@
             </header>
             <main class="content">
                 <section class="profile page__section">
-                    <div class="profile__container">
+                    <div class="profile__image-container">
                         <img
-                            src="<%=require('./images/jacques-cousteau.png')%>"
-                            alt="Avatar"
+                            src=""
+                            alt="Profile picture"
                             class="profile__image"
                         />
                         <button
                             class="profile__image-edit"
                             type="button"
+                            aria-label="Edit profile picture"
                         ></button>
                     </div>
                     <div class="profile__info">
-                        <h1 class="profile__title">Jacques Cousteau</h1>
+                        <h1 class="profile__title"></h1>
                         <button
                             class="profile__edit-button"
-                            id="profile-edit-button"
                             type="button"
+                            aria-label="Edit profile"
                         ></button>
-                        <p class="profile__description">Explorer</p>
+                        <p class="profile__description"></p>
                     </div>
-                    <button class="profile__add-button" type="button"></button>
+                    <button
+                        class="profile__add-button"
+                        type="button"
+                        aria-label="Add new place"
+                    ></button>
                 </section>
                 <section class="cards page__section">
                     <ul class="cards__list"></ul>
